# magellan-spacemouse

./: .gitmodules  CMakeLists.txt  README.md  magellan.uf2  magellan_pico2.uf2
src/: descriptors.c  magellan.c
